# Pytorch-Teaching

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  LICENSE  Makefile  Pytorch-Lesson-1 (What is tensor?).ipynb  Pytorch-Lesson-2 (Math Function with Tensor).ipynb  Pytorch-Lesson-3 (Convert tensor and cpu-cuda).ipynb  README.md  SECURITY.md  TEST_RESULTS.md  lessons-learned.md  pyproject.toml  requirements.txt  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/pytorch_teaching/: __init__.py  cli.py
src/pytorch_teaching/lessons/: __init__.py  lesson_01_tensors.py  lesson_02_math_ops.py  lesson_03_device_management.py  lesson_13_placeholder.py  lesson_19_placeholder.py  lesson_21_executorch.py
src/pytorch_teaching/utils/: __init__.py  helpers.py  visualization.py
tests/: __init__.py  test_cli.py  test_lessons.py
